--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <div class="grid">
         <a href="https://aserdevyt.github.io/">Website</a>
         <a href="https://www.youtube.com/@aserdev_yt" target="_blank">YouTube</a>
-        <a href="https://github.com/aserdev" target="_blank">GitHub</a>
+        <a href="https://github.com/aserdevyt" target="_blank">GitHub</a>
       </div>
     </div>
 
