--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -64,7 +64,7 @@
           <a href="https://omarchy.org/" target="_blank">omarchy</a> but it
           isn't dev focused — it's focused for people who just want a cool
           Hyprland setup that isn't fancy or complicated. (aka:
-          <a href="https://github.com/aserdevyy" target="_blank">me</a>)
+          <a href="https://github.com/aserdevyt" target="_blank">me</a>)
         </p>
 
         <h3>Images</h3>
