modified:   aserdev-os/index.html 	new file:   aserdev-os/wiki/config.html 	new file:   aserdev-os/wiki/index.html 	new file:   aserdev-os/wiki/installation.html 	new file:   aserdev-os/wiki/packages.html 	new file:   aserdev-os/wiki/script.js 	new file:   aserdev-os/wiki/style.css

--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -47,6 +47,23 @@
             transition: background 0.2s;
           "
           >GitHub</a
+          
+        >
+                <a
+          href="/aserdev-os/wiki/"
+          target="_blank"
+          style="
+            display: inline-block;
+            padding: 10px 24px;
+            background: #38bdf8;
+            color: #334155;
+            border-radius: 8px;
+            font-weight: 700;
+            text-decoration: none;
+            font-size: 1em;
+            transition: background 0.2s;
+          "
+          >wiki</a
         >
       </div>
       <h1>Aserdev-OS</h1>
