new file:   .nojekyll 	modified:   about.html 	modified:   aserdev-os/index.html 	modified:   aserdev-os/wiki/config.html 	modified:   aserdev-os/wiki/index.html 	modified:   aserdev-os/wiki/installation.html 	modified:   aserdev-os/wiki/packages.html 	modified:   index.html 	modified:   other-projects/ash-shell/index.html 	modified:   other-projects/brokefetch/index.html 	modified:   other-projects/cpuinfo/index.html 	modified:   other-projects/index.html 	modified:   other-projects/text-to-ascii/index.html 	modified:   pacman-repo/index.html 	new file:   robots.txt 	new file:   sitemap.xml

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Welcome to Aserdev</title>
+	<link rel="canonical" href="https://aserdevyt.github.io/">
+	<meta name="robots" content="index, follow">
 	<meta name="description" content="Aserdev's open-source projects: Aserdev-OS, Pacman Repo, Bash & C tools. Linux, Arch, and more!">
 	<meta name="keywords" content="Aserdev, Linux, Arch, open-source, Bash, C, Pacman, OS, projects">
 	<meta name="author" content="Aserdev">
