--- a/other-projects/ash-shell/index.html
+++ b/other-projects/ash-shell/index.html
@@ -7,6 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>ash-shell — Details</title>
+  <link rel="canonical" href="https://aserdevyt.github.io/other-projects/ash-shell/">
+  <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="/style.css">
   <style>
     .container {
