--- a/other-projects/brokefetch/index.html
+++ b/other-projects/brokefetch/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>brokefetch — Details</title>
+  <link rel="canonical" href="https://aserdevyt.github.io/other-projects/brokefetch/">
+  <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="/style.css">
   <style>
     .container { max-width:900px; margin:48px auto; padding:28px; border-radius:12px; background:rgba(30,41,59,0.85); }
