--- a/pacman-repo/index.html
+++ b/pacman-repo/index.html
@@ -58,6 +58,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Aserdev Pacman Repo</title>
+	<link rel="canonical" href="https://aserdevyt.github.io/pacman-repo/">
+	<meta name="robots" content="index, follow">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
