--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>About — AserDev</title>
+  <link rel="canonical" href="https://aserdevyt.github.io/about.html">
+  <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="/images/logo.jpeg" sizes="32x32">
   <style>
