--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aserdev OS Distro</title>
+  <link rel="canonical" href="https://aserdevyt.github.io/aserdev-os/">
+  <meta name="robots" content="index, follow">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
