--- a/aserdev-os/wiki/index.html
+++ b/aserdev-os/wiki/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Aserdev-OS Wiki</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://aserdevyt.github.io/aserdev-os/wiki/">
+  <meta name="robots" content="index, follow">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/aserdev-os/wiki/style.css">
     <link rel="icon" href="/images/logo.jpeg" sizes="32x32">
   </head>
