--- a/aserdev-os/wiki/installation.html
+++ b/aserdev-os/wiki/installation.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Installation — Aserdev-OS Wiki</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://aserdevyt.github.io/aserdev-os/wiki/installation.html">
+  <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="/aserdev-os/wiki/style.css">
     <link rel="icon" href="/images/logo.jpeg" sizes="32x32">
   </head>
