--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -145,6 +145,8 @@
 <body>
 	<button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
 		<div class="container">
+	<link rel="canonical" href="https://aserdevyt.github.io/other-projects/">
+	<meta name="robots" content="index, follow">
 			<div style="text-align:center; margin-bottom:24px;">
 				<a href="/index.html" style="display:inline-block; padding:10px 24px; background:#38bdf8; color:#1e293b; border-radius:8px; font-weight:700; text-decoration:none; font-size:1em; margin-right:12px; transition:background 0.2s;">Home</a>
 				<a href="https://github.com/aserdevyt/" target="_blank" style="display:inline-block; padding:10px 24px; background:#38bdf8; color:#1e293b; border-radius:8px; font-weight:700; text-decoration:none; font-size:1em; transition:background 0.2s;">GitHub</a>
