modified:   aserdev-os/wiki/index.html

--- a/aserdev-os/wiki/index.html
+++ b/aserdev-os/wiki/index.html
@@ -18,7 +18,7 @@
         <a class="top-link top-link--secondary" href="/">Home</a>
       </div>
       <h1>Wiki Home</h1>
-      <p class="desc">Documentation hub for Aserdev-OS. Replace the placeholders on each page with the full documentation.</p>
+      <p class="desc">Documentation hub for Aserdev-OS..</p>
 
       <section class="md-section">
         <h2>Contents</h2>
