modified:   other-projects/text-to-ascii/index.html

--- a/other-projects/text-to-ascii/index.html
+++ b/other-projects/text-to-ascii/index.html
@@ -47,8 +47,7 @@
   <img src="https://img.shields.io/github/languages/top/Szerwigi1410/Text-to-ascii-encoder" alt="GitHub top language">
 </a>
 
-<!-- Static Made With Badge -->
-<img src="https://img.shields.io/badge/made_with-vscode%2C_nano%2C_Xcode%2C_helix-blue" alt="Made with VSCode, nano, Xcode, helix">
+
     </div>
 
     <h2>Install Options</h2>
@@ -67,7 +66,27 @@
       <div class="code" id="scriptCmd2">git clone https://github.com/Szerwigi1410/Text-to-ascii-encoder.git && cd Text-to-ascii-encoder && chmod +x install.sh && ./install.sh</div>
       <button class="copy" onclick="copyText('scriptCmd2', this)">Copy</button>
     </div>
-
+    <h2>usage</h2>
+    <p>to use ascii-enc in intractive mode just type:</p>
+    <div class="cmd-row">
+      <div class="code" id="usageCmd">ascii-enc</div>
+      <button class="copy" onclick="copyText('usageCmd', this)">Copy</button>
+    </div>
+    <p>to encode text directly from command line use:</p>
+    <div class="cmd-row">
+      <div class="code" id="usageCmd2">ascii-enc "your text here"</div>
+      <button class="copy" onclick="copyText('usageCmd2', this)">Copy</button>
+    </div>
+    <p>to encode text to ascii in a list use:</p>
+    <div class="cmd-row">
+      <div class="code" id="usageCmdList">ascii-enc -l "your text here"</div>
+      <button class="copy" onclick="copyText('usageCmdList', this)">Copy</button>
+    </div>
+    <p>to decode ascii codes back to text use:</p>
+    <div class="cmd-row">
+      <div class="code" id="usageCmd3">ascii-enc -r "ascii codes here"</div>
+      <button class="copy" onclick="copyText('usageCmd3', this)">Copy</button>
+    </div>
     <footer style="margin-top:28px; padding-top:18px; border-top:1px solid rgba(255,255,255,0.04); display:flex; gap:12px; align-items:center; justify-content:space-between; flex-wrap:wrap">
       <div style="color:#cbd5e1">&copy; 2025 Aserdev</div>
       <div class="footer-buttons" style="display:flex; gap:12px;">
