modified:   aserdev-os/wiki/index.html 	new file:   aserdev-os/wiki/usage.html 	new file:   images/quickmenu.png 	new file:   images/settings.png 	modified:   sitemap.xml

--- a/aserdev-os/wiki/index.html
+++ b/aserdev-os/wiki/index.html
@@ -26,6 +26,7 @@
           <li><a href="config.html">Configuration</a> — tips and dotfiles for Hyprland, Wayland utilities, and themes.</li>
           <li><a href="installation.html">Installation</a> — install script, manual steps, and ISO notes.</li>
           <li><a href="packages.html">Packages</a> — package list, repo info, and how to add/remove packages.</li>
+          <li><a href="usage.html">Usage</a> — instructions for using Aserdev-OS.</li>
         </ul>
       </section>
 
