modified:   aserdev-os/wiki/index.html

--- a/aserdev-os/wiki/index.html
+++ b/aserdev-os/wiki/index.html
@@ -27,6 +27,9 @@
           <li><a href="installation.html">Installation</a> — install script, manual steps, and ISO notes.</li>
           <li><a href="packages.html">Packages</a> — package list, repo info, and how to add/remove packages.</li>
           <li><a href="usage.html">Usage</a> — instructions for using Aserdev-OS.</li>
+          <li><a href="https://wiki.hypr.land/">hyprland</a> - the official hyprland wiki</li>
+          <li><a href="https://github.com/Alexays/Waybar/wiki/">waybar</a> - the official waybar wiki</li>
+          <li><a href="archlinux.org">archlinux</a> - the official archlinux wiki "they are better than this wiki"</li>
         </ul>
       </section>
 
