modified:   aserdev-os/index.html

--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -129,7 +129,7 @@
           </button>
         </div>
 
-        <p>ISO: coming soon — I need help creating an installer/ISO build.</p>
+        <p>ISO: <a href="https://github.com/aserdevyt/aserdev-os/releases" target="_blank">https://github.com/aserdevyt/aserdev-os/releases</a></p>
 
         <h3>Issues</h3>
         <p>
